@@ -3,6 +3,11 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-11-12
+	- Starting "unversioned" version request dispatch
+	
+	
+	
 2008-11-11   (Happy B-day Ini!)
 	- MmiUri.LATEST_VERSION_INDICATOR = "$"
 	
